crates/fe/tests/fixtures/cli_output/single_files/generated_impl_body_is_type_checked.snap
---
source: crates/fe/tests/cli_output.rs
assertion_line: 1822
expression: output
input_file: tests/fixtures/cli_output/single_files/generated_impl_body_is_type_checked.fe
---
=== STDERR ===
errors in file://<project>/crates/fe/tests/fixtures/cli_output/single_files/generated_impl_body_is_type_checked.fe

error[8-0013]: returned type mismatch
   ┌─ generated_impl_body_is_type_checked.fe:44:1
   │
44 │ derive Dup for Point using BadDup
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │ │
   │ expected `Point`, but `bool` is returned
   │ this function expects `Point` to be returned


=== EXIT CODE: 1 ===
